Salesforce/main/default/objects/CRM_Infraestructura__c/CRM_Infraestructura__c.object-meta.xml
<CustomObject>
    <label>CRM Detalhe Infraestructura</label>
    <nameField>
        <label>Nombre de Infraestructura</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Detalhe Infraestructura</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>