Salesforce/main/default/objects/CRM_Infraestructura__c/fields/Agroquimico__c.field-meta.xml
<CustomField>
    <fullName>Agroquimico__c</fullName>
    <label>Agroquimico</label>
    <type>TextArea</type>
</CustomField>