Salesforce/main/default/objects/CRM_Infraestructura__c/fields/Cidade__c.field-meta.xml
<CustomField>
    <fullName>Cidade__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Cidade</label>
    <referenceTo>Cidade__c</referenceTo>
    <relationshipLabel>Detalhe Infraestructura</relationshipLabel>
    <relationshipName>Infraestructura</relationshipName>
    <type>Lookup</type>
</CustomField>