Salesforce/main/default/objects/CRM_Infraestructura__c/fields/CRM_Multiplicador__c.field-meta.xml
<CustomField>
    <fullName>CRM_Multiplicador__c</fullName>
    <label>CRM Multiplicador</label>
    <referenceTo>CRM_Multiplicador__c</referenceTo>
    <relationshipLabel>Detalhe Infraestructura</relationshipLabel>
    <relationshipName>Detalhe_Infraestructura</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>