Salesforce/main/default/objects/CRM_Infraestructura__c/fields/Produto__c.field-meta.xml
<CustomField>
    <fullName>Produto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Producto suministrado por la Empresa</description>
    <inlineHelpText>Produto fornecido pela Companhia</inlineHelpText>
    <label>Produto</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Detalhe Infraestructura</relationshipLabel>
    <relationshipName>Detalhe_Infraestructura</relationshipName>
    <type>Lookup</type>
</CustomField>