Salesforce/main/default/objects/CRM_Infraestructura__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Região</label>
    <referenceTo>Regiao__c</referenceTo>
    <relationshipLabel>Detalhe Infraestructura</relationshipLabel>
    <relationshipName>Detalhe_Infraestructura</relationshipName>
    <type>Lookup</type>
</CustomField>