Salesforce/main/default/objects/CRM_Infraestructura__c/fields/Safra__c.field-meta.xml
<CustomField>
    <fullName>Safra__c</fullName>
    <label>Safra</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>12/13</fullName>
                <default>true</default>
                <label>12/13</label>
            </value>
            <value>
                <fullName>11/12</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>