Salesforce/main/default/objects/CRM_Infraestructura__c/fields/TipoReg_F__c.field-meta.xml
<CustomField>
    <fullName>TipoReg_F__c</fullName>
    <formula>IF(RecordType.Name = &apos;F&apos;,  Capacidade__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TipoReg F</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>