Salesforce/main/default/objects/CRM_Infraestructura__c/fields/Volume_Tratado__c.field-meta.xml
<CustomField>
    <fullName>Volume_Tratado__c</fullName>
    <label>Volume Tratado</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>