Salesforce/main/default/objects/CRM_Infraestructura__c/recordTypes/A.recordType-meta.xml
<RecordType>
    <fullName>A</fullName>
    <active>true</active>
    <description>Detalhe infraestrutura por Cidade</description>
    <label>A</label>
</RecordType>