Salesforce/main/default/objects/CRM_Infraestructura__c/recordTypes/B.recordType-meta.xml
<RecordType>
    <fullName>B</fullName>
    <active>true</active>
    <description>Detalhe infraestrutura pela empresa para a produção de sementes</description>
    <label>B</label>
</RecordType>