Salesforce/main/default/objects/CRM_Infraestructura__c/recordTypes/F.recordType-meta.xml
<RecordType>
    <fullName>F</fullName>
    <active>true</active>
    <description>Cantidad de Filiales por Region</description>
    <label>F</label>
</RecordType>