Salesforce/main/default/objects/CRM_Infraestructura__c/recordTypes/G.recordType-meta.xml
<RecordType>
    <fullName>G</fullName>
    <active>true</active>
    <description>Expectativa de Expansão/Ampliação por Cidade</description>
    <label>G</label>
</RecordType>