Salesforce/main/default/objects/CRM_Infraestructura__c/recordTypes/P_F.recordType-meta.xml
<RecordType>
    <fullName>P_F</fullName>
    <active>true</active>
    <description>Planejamiento Cantidad de Filiales por Region</description>
    <label>P_F</label>
</RecordType>