Salesforce/main/default/objects/CRM_Infraestructura__c/recordTypes/P_G.recordType-meta.xml
<RecordType>
    <fullName>P_G</fullName>
    <active>true</active>
    <description>Planejamento Expectativa de Expansão/Ampliação por Cidade</description>
    <label>P_G</label>
</RecordType>