Salesforce/main/default/objects/CRM_Infraestructura__c/validationRules/Datos_Validos_B.validationRule-meta.xml
<ValidationRule>
    <fullName>Datos_Validos_B</fullName>
    <active>true</active>
    <errorConditionFormula>AND($RecordType.Name == &apos;B&apos; , OR(ISNULL(Capacidade__c), TEXT(Empresa__c) ==  &apos;&apos;, TEXT(Exclusividade__c)==&apos;&apos;))</errorConditionFormula>
    <errorMessage>Deve entrar todos os dados para tratamento de sementes por empresa.</errorMessage>
</ValidationRule>